MDEV-37005 Unexpected ER_TABLE_EXISTS_ERROR on primary or replica upon CREATE OR REPLACE for partitioned table

cannot check thd->lex->part_info when a table is opened,
it can describe anything, not necessarily the table in question